# AutoLogger

./: .gitignore  Autologger.py  LICENSE  README.md  README_integrated.md  autologger.py  evaluation_guide.md  pyproject.toml  requirements.txt
baselines/: README_baselines.md  baseline_heuristic.py  baseline_heuristic2.py  baseline_random.py  baseline_random2.py  parser_output.json  results_heuristic.json  results_random.json
docs/: environment_setup_guide.md  evaluation_guide.md  handwritting_goldjson_guide.md  schema.md
eval/: README.md  convert_llm_for_eval.py  eval_message_quality.py  eval_positions.py
gold_logs/: script10_gold.json  script11_gold.json  script12_gold.json  script13_gold.json  script15_gold.json  script16_gold.json  script17_gold.json  script18_gold.json  script1_gold.json  script20_gold.json  script21_gold.json  script22_gold.json  script25_gold.json  script26_gold.json  script27_gold.json  script2_gold.json  script33_gold.json  script36_gold.json  script3_gold.json  script40_gold.json  script42_gold.json  script45_gold.json  script46_gold.json  script49_gold.json  script4_gold.json  script50_gold.json  script53_gold.json  script54_gold.json  script56_gold.json  script57_gold.json  script58_gold.json  script59_gold.json  script5_gold.json  script60_gold.json  script61_gold.json  script62_gold.json  script64_gold.json  script65_gold.json  script68_gold.json  script6_gold.json  (+24 more)
llm/: autologger.py  autologger2.py
parser/: README_parser.md  parser.py  schema.py
results/: .keep  baseline_heuristic.json  baseline_random_sample1.json  (+464 more)
(+531 files in other folders)
