[project]
name = "autologger"
version = "0.1.0"
description = "Automatic logging statement generator (AutoLogger project)"
authors = [{ name = "Team AutoLogger", email = "team@example.com" }]
requires-python = ">=3.9"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
target-version = ["py39"]
